--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About</a>
             </li>
             <li>
-              <a href="contact.html">
+              <a href="">
                 <span class="glyphicon glyphicon-phone-alt"><br class="hidden-xs"></span><br class="hidden-xs">Contact Us
               </a>
             </li>
@@ -79,48 +79,58 @@
   <div id="xs-deliver" class="visible-xs text-center">
    * We Deliver
   </div>
+<!-- contact us-->
 
-
-<div  id="main-content" class="container">
-  <div class="jumbotron">
-  <img src="images/jumbotron_768.jpg"alt="pic of rest" class="img-responsive visible-xs">
+<div class="container">
+<form class="form-inline">
+  <div class="form-group">
+    <label for="exampleInputName2">Name :</label>
+    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
   </div>
+  <br>
+  <br>
+  
+  <div class="form-group">
+    <label for="exampleInputEmail2">Email :</label>
+    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+  </div>
+  <br>
+  <br>
+  <div class="form-group">
+    <label for="exampleInputEmail2">Message :
+    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="type your query">
+  </div>
+  <br>
+  <br>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+      </div>
+    </div>
+  </div>
+  <br><br>
 
-  <div id="home-tiles" class="row">
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <a href="menu-categories.html">
-        <div id="menu-tile" class="img-responsive">
-          <span>
-           Menu
-          </span>
-        </div>
-      </a>  
-    </div><!--1st image-->
 
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <a href="single-categories.html">
-        <div id="specials-tile" class="img-responsive">
-          <span>
-           Specials
-          </span>
-        </div>
-      </a>  
-    </div><!--2nd image-->
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+  </div>
+  
+  
 
-    <div class="col-md-4 col-sm-12 col-xs-12">
-      <a href="https://goo.gl/maps/ktnZXcxKLB7wbZZc8" target="_blank">
-        <div id="map-tile">
+</form>
+</div>
 
-          <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d3767.7844259124854!2d72.94999741467497!3d19.204615787014216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3be7b90c817aebdb%3A0x63311bb32a0825b3!2sPlot%20No.%20N%2C%20Sunrise-Decorators%2C%20No.%2033%2C%2061%2C%20ESIC%20Hospital%20Rd%2C%20Wagle%20Estate%2C%20Lokmanya%20Nagar%2C%20Thane%20West%2C%20Thane%2C%20Maharashtra%20400604!3m2!1d19.2046158!2d72.95218609999999!5e0!3m2!1sen!2sin!4v1607471827591!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-          <span>
-           Map
-          </span>
-        </div>
-      </a>  
-    </div><!--3rd image-->
-    
-  </div><!-- row of images -->
-</div> <!-- container images-->
+
+
+
+
+
+
 <footer class="panel-footer">
   <div class="container">
     <div class="row">
