--- a/menu-categories.html
+++ b/menu-categories.html
@@ -20,10 +20,10 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>Swamy Round The Clock</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
+              <span>Get a taste of India to go!</span>
             </p>
           </div>
 
@@ -52,8 +52,8 @@
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About</a>
             </li>
             <li>
-              <a href="">
-                <span class="glyphicon glyphicon-certificate"><br class="hidden-xs"></span><br class="hidden-xs">Awards
+              <a href="contact.html">
+                <span class="glyphicon glyphicon-phone-alt"><br class="hidden-xs"></span><br class="hidden-xs">Contact Us
               </a>
             </li>
             <li id="phone" class="hidden-xs">
@@ -90,77 +90,240 @@
 
 <section class="row">
   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/1.jpg" alt="Lunch">
+        <span>MINT SPICED IDLYS</span>
       </div>
     </a>
   </div>
   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12 ">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/2.jpg" alt="Lunch">
+        <span>REGULAR SOFT IDLYS</span>
       </div>
     </a>
   </div>
    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/3.jpg" alt="Lunch">
+        <span>SPICED MINI IDLYS</span>
       </div>
     </a>
   </div><!--3rd photo-->
    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/4.jpg" alt="Lunch">
+        <span>KANCHIPURAM IDLI MADE WITH TEMPERED SPICES</span>
       </div>
     </a>
   </div>
    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12 ">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+        <img width="200" height="200" src="image/6.jpg" alt="Lunch">
         <span>Lunch</span>
       </div>
     </a>
   </div>
    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/7.jpg" alt="Lunch">
+        <span>MASALA IDLI</span>
       </div>
     </a>
   </div><!-- 6th photo-->
-   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="single-category.html">
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/8.jpg" alt="Lunch">
+        <span>SHEV PURI</span>
       </div>
     </a>
   </div>
    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/9.jpg" alt="Lunch">
+        <span>APPAM SERVED WITH CHUTNEYS & CHICKEN</span>
       </div>
     </a>
   </div>
    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
-    <a href="single-category.html">
+    <a href="">
       <div class="category-tile">
-        <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-        <span>Lunch</span>
+        <img width="200" height="200" src="image/10.jpg" alt="Lunch">
+        <span>SPROUT DOSA STUFFED WITH UPMA</span>
       </div>
     </a>
   </div><!--9th photo-->
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/11.jpg" alt="Lunch">
+        <span>REGULAR DOSA WITH VARIATION IN FILLINGS</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/12.jpg" alt="Lunch">
+        <span>NEER DOSA WITH CHUTNEY & STEW</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/14.jpg" alt="Lunch">
+        <span>Lunch</span>
+      </div>
+    </a>
+  </div><!--12th photo-->
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/15.jpg" alt="Lunch">
+        <span>SPRING DOSA</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/16.jpg" alt="Lunch">
+        <span>SANDWICH DOSA</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/17.jpg" alt="Lunch">
+        <span>STEAMED FISH IN BANANA LEAF</span>
+      </div>
+    </a>
+  </div><!--15th photo-->
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/18.jpg" alt="Lunch">
+        <span>CHICKEN CHAT INSPIRED WITH CHETTINAD PREPERATIONS</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/19.jpg" alt="Lunch">
+        <span>MIRCHI CHAT IN ANDRA STYLE</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/20.jpg" alt="Lunch">
+        <span>BOONDI CHAT DELIGHT</span>
+      </div>
+    </a>
+  </div><!--18th photo-->
+  
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/21.jpg" alt="Lunch">
+        <span>CHICKEN CURRY RICE & CHIPS</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/22.jpg" alt="Lunch">
+        <span>MANGLORIAN FISH CURRY AND RICE</span>
+      </div>
+    </a>
+  </div><!--21th photo-->
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/23.jpg" alt="Lunch">
+        <span>MUTTON PULUSU</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/24.jpg" alt="Lunch">
+        <span>TAMARIND RICE WITH LEMON FLAVOURS</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/25.jpg" alt="Lunch">
+        <span>CHICKEN HYDERABADI BIRYANI</span>
+      </div>
+    </a>
+  </div><!--24th photo-->
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/26.jpg" alt="Lunch">
+        <span>CHICKEN CHETTINAD</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/27.jpg" alt="Lunch">
+        <span>CHICKEN 65</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/28.jpg" alt="Lunch">
+        <span>NATU KOURA PULUSU</span>
+      </div>
+    </a>
+  </div><!--27th photo-->
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/29.jpg" alt="Lunch">
+        <span>GONGURA CHICKEN CURRY</span>
+      </div>
+    </a>
+  </div>
+   <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/32.jpg" alt="Lunch">
+        <span>CHICKEN FRY BIRYANI</span>
+      </div>
+    </a>
+  </div>
+  <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+    <a href="">
+      <div class="category-tile">
+        <img width="200" height="200" src="image/34.1.jpg" alt="Lunch">
+        <span>MUTTON CURRY WITH GOUNGURA PULUSU</span>
+      </div>
+    </a>
+  </div><!--last image-->
+  
+
 
   
 </section><!--end of menu section -->
@@ -185,12 +348,12 @@
         <hr class="visible-xs">
       </section>
       <section id="testimonials" class="col-sm-4">
-         <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+         <p>"The best south Indian restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
       </section>
     </div><!-- footer row-->
     
-    <div class="text-center">&copy;Copyright David Chu's China Bistro 2020</div>
+    <div class="text-center">&copy;Copyright Swamy Round The Clock 2021</div>
   </div><!--footer container-->
 </footer>
 
