--- a/single-category.html
+++ b/single-category.html
@@ -20,10 +20,10 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>Swamy Round The Clock</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
+              <span>Get a taste of India to go!</span>
             </p>
           </div>
 
@@ -52,8 +52,8 @@
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About</a>
             </li>
             <li>
-              <a href="">
-                <span class="glyphicon glyphicon-certificate"><br class="hidden-xs"></span><br class="hidden-xs">Awards
+              <a href="contact.html">
+                <span class="glyphicon glyphicon-phone-alt"><br class="hidden-xs"></span><br class="hidden-xs">Contact Us
               </a>
             </li>
             <li id="phone" class="hidden-xs">
@@ -221,12 +221,12 @@
         <hr class="visible-xs">
       </section>
       <section id="testimonials" class="col-sm-4">
-         <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+         <p>"The best south Indian restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
       </section>
     </div><!-- footer row-->
     
-    <div class="text-center">&copy;Copyright David Chu's China Bistro 2020</div>
+    <div class="text-center">&copy;Copyright Swamy Round The Clock 2021</div>
   </div><!--footer container-->
 </footer>
 
